--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "redux": "^4.0.1",
-    "redux-saga": "^1.0.4"
+    "redux-saga": "^1.0.4",
+    "express": "*",
+    "express-fileupload": "*",
+    "cloudinary": "*"
   },
   "scripts": {
     "start": "react-scripts start",
